test/rules/fail/rexcept_oracle_01.zc
(* resulting game is not well-formed (y not defined) *)
adversary A : () -> ().
oracle O : Fq -> Fq.

prove [
  () <- A() with
    O(x) = [ y | y <-$ Fq ];
] : true.
rexcept_oracle (1,1,1) y.
print_goals : excepted_sampling.